--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -3,16 +3,19 @@
 - name: Include OS-specific variables (Debian).
   include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version.split('.')[0] }}.yml"
   when: ansible_os_family == 'Debian'
+  ignore_errors: true
 
 - name: Include OS-specific variables (RedHat).
   include_vars: "{{ ansible_os_family }}-{{ ansible_distribution_version.split('.')[0] }}.yml"
   when:
   - ansible_os_family == 'RedHat'
   - ansible_distribution != 'Fedora'
+  ignore_errors: true
 
 - name: Include OS-specific variables (Fedora).
   include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_version.split('.')[0] }}.yml"
   when: ansible_distribution == 'Fedora'
+  ignore_errors: true
 
 - name: Define postgresql_packages.
   set_fact:
